src/main/java/egovframework/example/admin/sidebar/member/error/exception/MemberSearchNotFoundException.java
package egovframework.example.admin.sidebar.member.error.exception;

public class MemberSearchNotFoundException extends RuntimeException{

}
